Started updating the dicsussion

--- a/Manuscript.Rmd
+++ b/Manuscript.Rmd
@@ -611,23 +611,21 @@ read.csv("Tables/Governance_data.csv", col.names = c("Indicator", "Description")
 
 # Discussion and Conclusions
 
-Here we discuss the ways in which results can be interpreted and
+Here we focus on the advantages and room for improvement in MAREA and highlight its relevance for management. While we do not discuss the case study ---which has been described before [@micheli_2012-EU; @rossetto_2015-V0; @munguavega_2015-yg]-- we draw from it to build on the usefulness of MAREA and discuss the ways in which results can be interpreted and used to better inform management.
 
-The interpretation of the $\beta_2$ coefficient is always relative to the control site. A positive value ($\beta_2 > 0$) might not nessesarily indicate an increase in the indicator. For example, invertebrate density presents a value of $\beta_2 = `r formatC(bio_results_summary$estimate[8], digits = 2, format = "f")`$ (*p* < 0.05), but Figure 5h shows a decrease in the indicator for the reserve and control sites through time. The decrease inside the reserve is not as abrupt as the changes in the control site, indicating that the reserves seem to provide a buffering effect. With additional knowledge of environmental variability (*i.e.* indicator B5 -- Natural Disturbance), we can better understand the performance of this indicator. As shown by @micheli_2012-EU, decreases in density can be caused by local hypoxic events.
+MAREA uses causal inference techniques to evaluate the effect of the reserve on biological indicators, which allows us to estimate the real effect of the intervention [@ferraro_2006-oW]. With different approaches, such as a before--after comparision, the trends in an indicator might be ambiguous. For example, invertebrate density decreased through time inside and outside of the reserve (Fig. 5h). In this case, a before--after evaluation of the reseve (*i.e.* ignoring the control site) would have incorrectly concluded that the reserve wasn't working. However, a control--impact approach (*i.e.* compare reserve vs. control site only in 2016) would have seen higher densities inside the reserve, leading to the conclusion that the reserve increases invertebrate density. However, MAREA identifies the changes through time and across sites, and estimates the effect of the reserve at $\beta_2 = `r formatC(bio_results_summary$estimate[8], digits = 2, format = "f")`$ (*p* < 0.05). What truly happens is that invertebrate densities decrease in both sites through time, but the decrease is faster for the control site, thus yielding a positive value for $\beta_2$.
 
-The results identified by our framework and MAREA are consistent to those previously published [*e.g.* @micheli_2012-EU; @rossetto_2015-V0]. While invertebrates show decreases in density for reserve and control sites, their densities remained higher within the reserve. Here, the positive effect indicated by $\beta_2$ does not indicate an increase in density, but rather a slower decrease in the reserve. This has occurred likely due to local hypoxic events [@micheli_2012-EU], where the reserves seem to provide a buffering effect.
+The approach used by MAREA to estimate the effect of the reserve on biological indicators requires cautious interpretation of the results. The value of the $\beta_2$ coefficient represents the difference between the temporal trends of the reserve and control sites. As exemplified by the case of invertebrate densities, a positive value (*i.e.* $\beta_2 > 0$) does not neccessarily indicate an increase in the indicator through time. The same is truth for negative values of $\beta_2$.
 
----
+MAREA provides an overview of the effect of the reserve, allowing the users to rapidly identify trends. However, users might need to combine results from multiple indicators to better understand the results. For example, with additional knowledge of local environmental variability (*i.e.* indicator B5 -- Natural Disturbance), we can better understand the trends in invertebrate densities. As reported before @micheli_2012-EU, hypoxic conditions that have ocurred in Isla Natividad can cause decreases in invertebrate densities and reserves buffer the negative effect. MAREA is intended to provide automatization and replicability of the analyses, but a propper interpretation will still depend on the user. Results produced by MAREA can only aid in management and decission making after its results have been correctly interpreted.
 
-While we are not able to infer causality from the socioeconomic analysis, we are able to identify important trends. For example, snail and urchin density have significantly increased within the reserve, but their landings and income have decreased. The opposite is observed for lobster and cucumber, which have shown increases in densities, landing, and income. While further information on market behavior of each species is needed, these results provide insights into the state of the reserve, as well as the associated fisheries.
+Cannot use causal inference techniques in socio eco and governance data due to their nature [@mascia_2017-m_]. However, we can still extract usefull information. Again, by combining results from multiple indicators, MAREA can provide insights into the effect of the reserve. **ARREGLAR EL SOCIOECONOMICO --- While we are not able to infer causality from the socioeconomic analysis, we are able to identify important trends. For example, snail and urchin density have significantly increased within the reserve, but their landings and income have decreased. The opposite is observed for lobster and cucumber, which have shown increases in densities, landing, and income. While further information on market behavior of each species is needed, these results provide insights into the state of the reserve, as well as the associated fisheries.** As for the governance information, there is no clear path to establish causal links between the reserve and the governance systems used. However, providing a single platform (scorecard) or document (technical report) where all information is comprehensively included might aid in management. Furthermore, this information would be standardly reported across reserves, providing managers with a single method of comapring everything.
 
------
-
-One of the greatest challenges in management measuring the extent to which objectives have been met. The present framework provides a simple and replicable way to align management objectives with performance indicators. We recognize that these 25 indicators might not fully describe a reserve. However, they provide a starting point to perform the evaluation, to which managers and users can add other indicators (*e.g.* larval dispersal or connectivity) that are relevant to their reserve.
-
-The proposed methodologies, especially the way in which biological indicators are evaluated, provide valuable information for managers. The analysis isolates the net effect of the reserve, providing a proper measure of reserve effectiveness. We acknowledge there is room for improvement in the way in which socioeconomic and governance data are analyzed. Despite this, we believe that providing a unifying platform where all indicators can be analyzed and comprehensively presented represents a valuable step towards evidence-based effective management.
+We recognize that these 25 indicators might not fully describe a reserve. However, they provide a starting point to perform the evaluation, to which managers and users can add other indicators (*e.g.* larval dispersal or connectivity) that are relevant to their reserve.
 
 Furthermore, MAREA's value is that it provides a free, simple, and replicable way to perform rigorous impact analysis. The tool can easily be used by fishers, SCO members, and managers in government agencies, providing transparency of the analysis and results. In addition, it can empower and enable local managers and fishers to respond to local change and adapt by allowing direct and easy access to the information. The way in which results are presented allows this information to be interpreted by a wide-ranging audience. The scorecard is easily understandable by experts and non-experts, and can be used as an effective tool for communicating the results of annual evaluations. Additionally, the technical report can serve as a tool for managers and scientists to rapidly produce and communicate information at a more technical level.
+
+One of the greatest challenges in management measuring the effect of interventions [@ferraro_2006-oW]. The present framework provides a simple and replicable way to align management objectives with performance indicators. The proposed methodologies, especially the way in which biological indicators are evaluated, provide valuable information for managers. The analysis isolates the net effect of the reserve, providing a proper measure of reserve effectiveness. We acknowledge there is room for improvement in the way in which socioeconomic and governance data are analyzed. Despite this, we believe that providing a unifying platform where all indicators can be analyzed and comprehensively presented represents a valuable step towards evidence--based effective management[@ferraro_2006-oW].
 
 While the first release of MAREA is now available, it will continue to be developed and maintained. This will incorporate new features, and enhance current ones, aiming to improve user experience and expand the scope of the analysis. Yet, we believe that this first release represents a major step towards effective evaluation and management of marine reserves.
 
